--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
         "password": "",
         "database": "perpus_maulana"
     },
-    "key": "HelloWorld"
+    "key": "HelloWorld",
+    "denda": 10000
 }
